Fix spacing issues

--- a/css/site.styl
+++ b/css/site.styl
@@ -153,7 +153,7 @@ section#browse
             color #8891A2
             position relative
             width 20%
-            min-height 300px
+            min-height 400px
             list-style-type none
             box-shadow 5px
             float left
